create side bar html elements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,60 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <div class="side-bar">
+      <div class="side-bar-top">
+        <ol>
+          <li>
+            <div></div>
+            <div></div>
+          </li>
+          <li>
+            <div></div>
+            <div></div>
+          </li>
+          <li>
+            <div></div>
+            <div></div>
+          </li>
+          <li>
+            <div></div>
+            <div></div>
+          </li>
+          <li>
+            <div></div>
+            <div></div>
+          </li>
+          <li>
+            <div></div>
+            <div></div>
+          </li>
+        </ol>
+      </div>
+      <div class="side-bar-bottom">
+        <ol>
+          <li>
+            <div></div>
+            <div></div>
+          </li>
+          <li>
+            <div></div>
+            <div></div>
+          </li>
+          <li>
+            <div></div>
+            <div></div>
+          </li>
+          <li>
+            <div></div>
+            <div></div>
+          </li>
+          <li>
+            <div></div>
+            <div></div>
+          </li>
+        </ol>
+      </div>
+    </div>
     <script src="js/index.js"></script>
   </body>
 </html>
