craete main panel elements in index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <div class="mainpanel">
+      <header class="mainpanel-header">
+        <h3 class="header-title">Orders</h3>
+        <div class="header-btn">
+          <button class="share-btn">Share</button>
+          <button class="export-btn">Export</button>
+          <select class="select-btn">
+            <option value="week">This Week</option>
+            <option value="month">This Month</option>
+            <option value="year">This Year</option>
+          </select>
+        </div>
+      </header>
+      <section class="mainpanel-body"></section>
+    </div>
     <script src="js/index.js"></script>
   </body>
 </html>
