--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
   <body>
     <div class="mainpanel">
       <header class="mainpanel-header">
-        <h3 class="header-title">Orders</h3>
+        <h2 class="header-title">Orders</h2>
         <div class="header-btn">
-          <button class="share-btn">Share</button>
-          <button class="export-btn">Export</button>
-          <select class="select-btn">
+          <button class="btn share-btn">Share</button>
+          <button class="btn export-btn">Export</button>
+          <select class="btn select-btn">
             <option value="week">This Week</option>
             <option value="month">This Month</option>
             <option value="year">This Year</option>
           </select>
         </div>
       </header>
+      <hr class="line" />
       <section class="mainpanel-body"></section>
     </div>
     <script src="js/index.js"></script>
