--- a/index.html
+++ b/index.html
@@ -12,53 +12,76 @@
       <div class="side-bar-top">
         <ol>
           <li>
-            <div></div>
-            <div></div>
+            <div>
+              <img src="/dashboard/icons/Home - 1.svg" alt="">
+            </div>
+            <div>Dashboard</div>
           </li>
           <li>
-            <div></div>
-            <div></div>
+            <div>
+              <img src="/dashboard/icons/Paper Negative.svg" alt="">
+            </div>
+            <div>Orders</div>
           </li>
           <li>
-            <div></div>
-            <div></div>
+            <div>
+              <img src="/dashboard/icons/Buy.svg" alt="">
+            </div>
+            <div>Products</div>
           </li>
           <li>
-            <div></div>
-            <div></div>
+            <div>
+              <img src="/dashboard/icons/2 User.svg" alt="">
+            </div>
+            <div>Customers</div>
           </li>
           <li>
-            <div></div>
-            <div></div>
+            <div>
+              <img src="/dashboard/icons/Chart.svg" alt="">
+            </div>
+            <div>Reports</div>
           </li>
           <li>
-            <div></div>
-            <div></div>
+            <div>
+              <img src="/dashboard/icons/Folder 2.svg" alt="">
+            </div>
+            <div>Integrations</div>
           </li>
         </ol>
       </div>
       <div class="side-bar-bottom">
         <ol>
           <li>
-            <div></div>
-            <div></div>
+            <div>SAVED REPORTS</div>
+            <div>
+              <img src="/dashboard/icons/Plus.svg" alt="">
+            </div>
           </li>
           <li>
-            <div></div>
-            <div></div>
+            <div>
+              <img src="/dashboard/icons/Paper.svg" alt="">
+            </div>
+            <div>Current month</div>
           </li>
           <li>
-            <div></div>
-            <div></div>
+            <div>
+              <img src="/dashboard/icons/Paper.svg" alt="">
+            </div>
+            <div>Last quarter</div>
           </li>
           <li>
-            <div></div>
-            <div></div>
+            <div>
+              <img src="/dashboard/icons/Paper.svg" alt="">
+            </div>
+            <div>Social engagement</div>
           </li>
           <li>
-            <div></div>
-            <div></div>
+            <div>
+              <img src="/dashboard/icons/Paper.svg" alt="">
+            </div>
+            <div>Year-end sale</div>
           </li>
+
         </ol>
       </div>
     </div>
