--- a/index.html
+++ b/index.html
@@ -8,98 +8,26 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <table>
-      <tr>
-        <td>#</td>
-        <td>Header</td>
-        <td>Header</td>
-        <td>Header</td>
-        <td>Header</td>
-      </tr>
-      <tr>
-        <td>1.001</td>
-        <td>Jack Russell</td>
-        <td>Poodle</td>
-        <td>Streetdog</td>
-        <td>Cocker Spaniel</td>
-      </tr>
-      <tr>
-        <td>1.001</td>
-        <td>16</td>
-        <td>9</td>
-        <td>10</td>
-        <td>5</td>
-      </tr>
-      <tr>
-        <td>1.001</td>
-        <td>Mother-in-law</td>
-        <td>Me</td>
-        <td>Me</td>
-        <td>Sister-in-law</td>
-      </tr>
-      <tr>
-        <td>1.001</td>
-        <td>Eats everyone's leftovers</td>
-        <td>Nibbles at food</td>
-        <td>Hearty eater</td>
-        <td>Will eat till he explodes</td>
-      </tr>
-      <tr>
-        <td>1.001</td>
-        <td>Jack Russell</td>
-        <td>Poodle</td>
-        <td>Streetdog</td>
-        <td>Cocker Spaniel</td>
-      </tr>
-      <tr>
-        <td>1.001</td>
-        <td>Jack Russell</td>
-        <td>Poodle</td>
-        <td>Streetdog</td>
-        <td>Cocker Spaniel</td>
-      </tr>
-      <tr>
-        <td>1.001</td>
-        <td>Jack Russell</td>
-        <td>Poodle</td>
-        <td>Streetdog</td>
-        <td>Cocker Spaniel</td>
-      </tr>
-      <tr>
-        <td>1.001</td>
-        <td>Jack Russell</td>
-        <td>Poodle</td>
-        <td>Streetdog</td>
-        <td>Cocker Spaniel</td>
-      </tr>
-      <tr>
-        <td>1.001</td>
-        <td>Jack Russell</td>
-        <td>Poodle</td>
-        <td>Streetdog</td>
-        <td>Cocker Spaniel</td>
-      </tr>
-      <tr>
-        <td>1.001</td>
-        <td>Jack Russell</td>
-        <td>Poodle</td>
-        <td>Streetdog</td>
-        <td>Cocker Spaniel</td>
-      </tr>
-      <tr>
-        <td>1.001</td>
-        <td>Jack Russell</td>
-        <td>Poodle</td>
-        <td>Streetdog</td>
-        <td>Cocker Spaniel</td>
-      </tr>
-      <tr>
-        <td>1.001</td>
-        <td>Jack Russell</td>
-        <td>Poodle</td>
-        <td>Streetdog</td>
-        <td>Cocker Spaniel</td>
-      </tr>
+    <table class="table">
+      <thead class="headerStyle">
+        <tr>
+          <th>#</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+        </tr>
+      </thead>
+
+      <tbody class="bodyStyle">
+        <tr>
+          <td>#</td>
+          <td>Header</td>
+          <td>Header</td>
+          <td>Header</td>
+          <td>Header</td>
+        </tr>
+      </tbody>
     </table>
     <script src="js/index.js"></script>
   </body>
