final side bar css & html

--- a/index.html
+++ b/index.html
@@ -8,40 +8,40 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="side-bar">
-      <div class="side-bar-top">
+    <div class="sidebar">
+      <div class="sidebar-top">
         <ol>
-          <li>
+          <li class="sidebar-top-item">
             <div>
               <img src="/dashboard/icons/Home - 1.svg" alt="">
             </div>
             <div>Dashboard</div>
           </li>
-          <li>
+          <li class="sidebar-top-item">
             <div>
               <img src="/dashboard/icons/Paper Negative.svg" alt="">
             </div>
             <div>Orders</div>
           </li>
-          <li>
+          <li class="sidebar-top-item">
             <div>
               <img src="/dashboard/icons/Buy.svg" alt="">
             </div>
             <div>Products</div>
           </li>
-          <li>
+          <li class="sidebar-top-item">
             <div>
               <img src="/dashboard/icons/2 User.svg" alt="">
             </div>
             <div>Customers</div>
           </li>
-          <li>
+          <li class="sidebar-top-item">
             <div>
               <img src="/dashboard/icons/Chart.svg" alt="">
             </div>
             <div>Reports</div>
           </li>
-          <li>
+          <li class="sidebar-top-item">
             <div>
               <img src="/dashboard/icons/Folder 2.svg" alt="">
             </div>
@@ -51,31 +51,31 @@
       </div>
       <div class="side-bar-bottom">
         <ol>
-          <li>
+          <li class="sidebar-bottom-title-item">
             <div>SAVED REPORTS</div>
             <div>
               <img src="/dashboard/icons/Plus.svg" alt="">
             </div>
           </li>
-          <li>
+          <li class="sidebar-bottom-item">
             <div>
               <img src="/dashboard/icons/Paper.svg" alt="">
             </div>
             <div>Current month</div>
           </li>
-          <li>
+          <li class="sidebar-bottom-item">
             <div>
               <img src="/dashboard/icons/Paper.svg" alt="">
             </div>
             <div>Last quarter</div>
           </li>
-          <li>
+          <li class="sidebar-bottom-item">
             <div>
               <img src="/dashboard/icons/Paper.svg" alt="">
             </div>
             <div>Social engagement</div>
           </li>
-          <li>
+          <li class="sidebar-bottom-item">
             <div>
               <img src="/dashboard/icons/Paper.svg" alt="">
             </div>
