--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </svg>
     
                 <select id="select">
-                  <option value="week">This Week</option>
+                  <option value="week">This W</option>
                   <option value="month">This Month</option>
                   <option value="year">This Year</option>
                 </select>
@@ -128,20 +128,20 @@
                 <thead class="headerStyle">
                   <tr>
                     <th>#</th>
-                    <th>Header</th>
-                    <th>Header</th>
-                    <th>Header</th>
-                    <th>Header</th>
+                    <th>Header5</th>
+                    <th>Header6</th>
+                    <th>Header7</th>
+                    <th>Header8</th>
                   </tr>
                 </thead>
           
                 <tbody class="bodyStyle">
                   <tr>
                     <td>#</td>
-                    <td>Header</td>
-                    <td>Header</td>
-                    <td>Header</td>
-                    <td>Header</td>
+                    <td>Header1</td>
+                    <td>Header2</td>
+                    <td>Header3</td>
+                    <td>Header4</td>
                   </tr>
                 </tbody>
               </table>
