change sidebar css class and remove three li and rename some and add a data row to table

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                   <div>
                     <img src="icons/Home - 1.svg" alt="" />
                   </div>
-                  <div>Dashboard</div>
+                  <div>User Panel</div>
                 </li>
                 <li class="sidebar-top-item">
                   <div>
                     <img src="icons/Paper Negative.svg" alt="" />
                   </div>
-                  <div>Orders</div>
+                  <div>Last Order</div>
                 </li>
                 <li class="sidebar-top-item">
                   <div>
@@ -78,18 +78,6 @@
                     <img src="icons/Paper.svg" alt="" />
                   </div>
                   <div>Last quarter</div>
-                </li>
-                <li class="sidebar-bottom-item">
-                  <div>
-                    <img src="icons/Paper.svg" alt="" />
-                  </div>
-                  <div>Social engagement</div>
-                </li>
-                <li class="sidebar-bottom-item">
-                  <div>
-                    <img src="icons/Paper.svg" alt="" />
-                  </div>
-                  <div>Year-end sale</div>
                 </li>
               </ol>
             </div>
@@ -142,6 +130,13 @@
                     <td>Header2</td>
                     <td>Header3</td>
                     <td>Header4</td>
+                  </tr>
+                  <tr>
+                    <td>#</td>
+                    <td>data1</td>
+                    <td>data2</td>
+                    <td>data3</td>
+                    <td>data4</td>
                   </tr>
                 </tbody>
               </table>
